# Hand-Navigation-System

./: LICENSE  notes.txt  pyproject.toml  requirements.txt
src/hand_nav/: camera_manager.py  gamepad_system.py  hand_follower.py  hands.py  nav_system.py  util.py
tests/: pynput_testing.py  test.py
