[project]
name = "hand_nav"
version = "0.0.1"
authors = [
	{ name="Jacob VanLuven", email="jvanluven14@gmail.com" },
]
description = "A navigation system developed around tracking the user's hand movements and gestures"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "absl-py==2.3.0",
    "attrs==25.3.0",
    "cffi==1.17.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "flatbuffers==25.2.10",
    "fonttools==4.58.1",
    "jax==0.6.1",
    "jaxlib==0.6.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "mediapipe==0.10.21",
    "ml_dtypes==0.5.1",
    "numpy==1.26.4",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "opt_einsum==3.4.0",
    "packaging==25.0",
    "pillow==11.2.1",
    "protobuf==4.25.8",
    "pycparser==2.22",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "scipy==1.15.3",
    "sentencepiece==0.2.0",
    "six==1.17.0",
    "sounddevice==0.5.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://simple.king-toot.com/packages/sgf"
Documentation = "https://simple.king-toot.com/packages/sgf/docs"
Repository = "https://github.com/KingToot14/Simple-Graphics-Format.git"
Issues = "https://github.com/KingToot14/Simple-Graphics-Format/issues"
Changelog = "https://simple.king-toot.com/packages/sgf/changes"